# creation

./: .env.example  .gitignore  .vercelignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  bootstrap.sh  install.sh  package-lock.json  package.json  pyproject.toml  vercel.json
.github/: pull_request_template.md
creation/: __init__.py  account_api.py  archaeology.py  cli.py  cli_progress.py  completion_cli.py  composio_api.py  config.py  forge_api.py  inbound.py  manual_takeover.py  nebius_client.py  orchestrator.py  preflight.py  schedule.py  server.py  setup_tui.py  setup_wizard.py  ship_receipt.py  skills.py  sponsors.py  store.py  suggest.py  tui.py  validate.py  webhooks.py  workdir.py
creation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
pitch/: launch-kit.md  slideshow.html
scripts/: creation.sh  make_icon.swift  make_og.swift
tests/: test_agent_usage.py  test_archaeology.py  test_auto_branch.py  test_cli_progress.py  test_completion_cli.py  test_composio_connections.py  test_config_migration.py  test_creation.py  test_deploy_ship.py  test_folder_picker.py  test_git_sync.py  test_honest_receipt.py  test_inbound.py  test_linear_tracking.py  test_manual_takeover.py  test_manual_takeover_api.py  test_marketing.py  test_mem0_memory.py  test_memory_providers.py  test_memory_status_endpoint.py  test_platform.py  test_preflight.py  test_repo_reuse.py  test_review_qa.py  test_skills_suggest.py  test_sponsors.py  test_subagents.py  test_turn_budget.py  test_work_api.py  test_work_governance.py  (+5 more)
(+125 files in other folders)
