[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "creation"
version = "0.6.0"
description = "Creation — local agent OS with first-party Forge, Lens, Prism, Relay, and Pulse"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.40.0",
    "httpx>=0.27.0",
    "duckduckgo-search>=6.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.12.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "playwright>=1.40.0",
    "textual>=1.0.0",
]

[project.optional-dependencies]
tui = ["textual>=1.0.0"]
dev = ["pytest>=7.0.0"]
review = ["playwright>=1.40.0"]

[project.scripts]
creation = "creation.completion_cli:main"

[tool.setuptools.packages.find]
include = ["creation*"]

[tool.setuptools.package-data]
creation = [
    "checkpoints/*.pt",
    "app/*.html",
    "app/assets/css/*.css",
    "app/assets/js/*.js",
    "app/assets/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
